--- a/asteroidHTML.html
+++ b/asteroidHTML.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
     <script src="./asteroid.js"></script>
 </head>
-<body onload="load()" onkeypress="moveSpaceShip(event)"> 
+<body onload="load()"> 
 
 </body>
 </html>
