--- a/asteroid.html
+++ b/asteroid.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asteroid</title>
-    <link rel="stylesheet" href="style.css"/>
-    <script src="./asteroid.js"></script>
+    <link rel="stylesheet" href="./style/style.css"/>
+    <script src="./scripts/asteroid.js"></script>
 </head>
 <body onload="load()"> 
 
